<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="3dp"
            android:hint="@string/lbSelecione"
            android:id="@+id/tvSelecione"/>

    </LinearLayout>

    <!-- LAYOUT DE ORIGEM -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/btOrigem"
            android:hint="@string/lbSelecioneOrigem"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbOrigemSelecionado"
            android:textSize="15dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/tvOrigem"/>


    </LinearLayout>
    <!-- FIM DO LAYOUT DE ORIGEM -->

    <!-- LAYOUT DE DESTINO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/btDestino"
            android:hint="@string/lbSelecioneDestino"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbDestinoSelecionado"
            android:textSize="15dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/tvDestino"/>

    </LinearLayout>
    <!-- FIM DO LAYOUT DE DESTINO -->

    <!-- RESTANTE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbPeso"
            android:layout_marginLeft="3dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="5dp"
            android:id="@+id/etPeso"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btCalcular"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/lbCalcular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbResultado"
            android:textSize="20dp"
            android:layout_marginLeft="3dp"
            android:id="@+id/tvResultado"/>

    </LinearLayout>

</LinearLayout>